--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,20 +8,46 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.ycbjie.tablayoutlib.CustomTabLayout
-        android:id="@+id/tab"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:tabIndicatorFullWidth="false"
-        app:tabIndicatorColor="@color/red"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/red"
-        app:tabTextColor="@color/black"/>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
-</LinearLayout>
+        <com.ycbjie.tablayoutlib.CustomTabLayout
+            android:id="@+id/tab"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:tabIndicatorFullWidth="false"
+            app:tabIndicatorColor="@color/red"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/red"
+            app:tabTextColor="@color/black"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/colorPrimary"/>
+
+
+        <com.ycbjie.tablayoutlib.CustomTabLayout
+            android:id="@+id/tab2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:tabIndicatorFullWidth="false"
+            app:tabIndicatorColor="@color/red"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/red"
+            app:tabTextColor="@color/black"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp2"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/colorPrimary"/>
+
+    </LinearLayout>
+
+
+</ScrollView>
