--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -27,14 +27,14 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@color/colorPrimary"/>
 
 
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab2"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -44,14 +44,14 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp2"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@color/colorPrimary"/>
 
 
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab3"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -61,13 +61,13 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp3"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@color/colorPrimary"/>
 
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab4"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -77,8 +77,66 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp4"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@color/colorPrimary"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp">
+
+            <com.ycbjie.tablayoutlib.CustomTabLayout
+                android:id="@+id/tab5"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                app:tabIndicatorFullWidth="false"
+                app:tabIndicatorColor="@color/red"
+                app:tabMode="scrollable"
+                app:tabSelectedTextColor="@color/red"
+                app:tabTextColor="@color/black"/>
+
+            <!--增大点击域-->
+            <FrameLayout
+                android:id="@+id/fl_close"
+                android:layout_width="44dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:layout_gravity="right">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@mipmap/icon_close_grey_50" />
+            </FrameLayout>
+
+
+        </FrameLayout>
+
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp5"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@color/colorPrimary"/>
+
+
+
+        <com.ycbjie.tablayoutlib.CustomTabLayout
+            android:id="@+id/tab6"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            app:tabIndicatorFullWidth="false"
+            app:tabIndicatorColor="@color/red"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/red"
+            app:tabTextColor="@color/black"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp6"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@color/colorPrimary"/>
+
 
     </LinearLayout>
 
