--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -27,14 +27,14 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"/>
 
 
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab2"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -44,14 +44,14 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp2"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"/>
 
 
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab3"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -61,13 +61,13 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp3"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"/>
 
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab4"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -77,17 +77,17 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp4"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"/>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp">
+            android:layout_height="40dp">
 
             <com.ycbjie.tablayoutlib.CustomTabLayout
                 android:id="@+id/tab5"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 app:tabIndicatorFullWidth="false"
                 app:tabIndicatorColor="@color/red"
                 app:tabMode="scrollable"
@@ -116,7 +116,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp5"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"/>
 
 
@@ -124,7 +124,7 @@
         <com.ycbjie.tablayoutlib.CustomTabLayout
             android:id="@+id/tab6"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             app:tabIndicatorFullWidth="false"
             app:tabIndicatorColor="@color/red"
             app:tabMode="scrollable"
@@ -134,8 +134,26 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp6"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"/>
+
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab7"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:tabIndicatorFullWidth="false"
+            app:tabIndicatorColor="@color/red"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/red"
+            app:tabTextColor="@color/black"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp7"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/colorPrimary"/>
+
 
 
     </LinearLayout>
